examples/compiler_errors/missing_effect_io.flx
// expect: compile_error
// expect-error: E400

fn loud() -> Unit {
    print("hi")
}

fn main() -> Unit {
    loud()
}
